refactor: simplified Fiber make command.

--- a/samples/fiber/Makefile
+++ b/samples/fiber/Makefile
@@ -26,4 +26,4 @@ endif
 # https://github.com/gofiber/recipes
 #--------------------------------------------------------------------------
 fiber:
-	git clone https://github.com/gofiber/recipes.git code
+	git clone https://github.com/gofiber/recipes.git $(PWD)${CODE_DIR}
