--- a/samples/nuxt/compose.yml
+++ b/samples/nuxt/compose.yml
@@ -11,21 +11,23 @@ services:
   # The Nuxt app container.
   nuxt:
     # https://hub.docker.com/_/node
-    image: node:16-alpine
+    image: node:lts-alpine
     container_name: ${APP_CONTAINER_NAME:-nuxt_app}
     networks:
       - local
     # Map the app container exposed port to the host port.
     ports:
       - ${APP_PORT:-80}:${APP_PORT:-80}
+      # Support Nuxt v3 hot reloading.
+      - 24678:24678
     tty: true
     volumes:
       - .${CODE_DIR:-/code}:/app
     working_dir: /app
     # Start the Nuxt dev server.
-    # https://nuxtjs.org/docs/get-started/commands/#list-of-commands
+    # https://nuxt.com/docs/api/commands/dev#nuxi-dev
     command: [
-      "yarn", "run", "dev",
+      "npx", "nuxi", "dev",
       "--port", "${APP_PORT:-80}",
       "--hostname", "0.0.0.0"
     ]
