--- a/samples/egg/Makefile
+++ b/samples/egg/Makefile
@@ -30,4 +30,4 @@ egg:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:alpine /bin/sh -c "npm init egg && yarn install"
+    node:18-alpine /bin/sh -c "npm init egg && yarn install"
