--- a/samples/nextjs/Makefile
+++ b/samples/nextjs/Makefile
@@ -30,4 +30,4 @@ nextjs:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:alpine /bin/sh -c "yarn create next-app ."
+    node:18-alpine /bin/sh -c "yarn create next-app ."
