--- a/samples/remix/Makefile
+++ b/samples/remix/Makefile
@@ -22,7 +22,7 @@ endif
 docker_command=docker run -it --rm --name playground \
   -v $(PWD)${CODE_DIR}:/app \
   -w="/app" \
-  node:alpine /bin/sh -c
+  node:18-alpine /bin/sh -c
 
 #--------------------------------------------------------------------------
 # Makefile targets.
