--- a/samples/slidev/Makefile
+++ b/samples/slidev/Makefile
@@ -30,7 +30,7 @@ slidev:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:alpine /bin/sh -c \
+    node:18-alpine /bin/sh -c \
       "yarn add @slidev/cli \
       @slidev/theme-default \
       @slidev/theme-default \
