--- a/samples/docusaurus/compose.yaml
+++ b/samples/docusaurus/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Docusaurus app container.
   docusaurus:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-docusaurus_app}
     networks:
       - local
