--- a/samples/egg/compose.yaml
+++ b/samples/egg/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Egg app container.
   egg:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-egg_app}
     networks:
       - local
