--- a/samples/jd-app/compose.yaml
+++ b/samples/jd-app/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The JD App container.
   jd:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-jd_app}
     networks:
       - local
