--- a/samples/nextjs/compose.yaml
+++ b/samples/nextjs/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Next.js app container.
   nextjs:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-nextjs_app}
     environment:
       - NEXT_TELEMETRY_DISABLED=1
