--- a/samples/qwik/compose.yaml
+++ b/samples/qwik/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Qwik app container.
   qwik:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-qwik_app}
     networks:
       - local
