--- a/samples/react-email/compose.yaml
+++ b/samples/react-email/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The React Email app container.
   react-email:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-react-email_app}
     environment:
       - NEXT_TELEMETRY_DISABLED=1
