--- a/samples/remix/compose.yaml
+++ b/samples/remix/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Remix app container.
   remix:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-remix_app}
     networks:
       - local
