--- a/samples/slidev/compose.yaml
+++ b/samples/slidev/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Slidev app container.
   slidev:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-slidev_app}
     networks:
       - local
