--- a/samples/vite/compose.yaml
+++ b/samples/vite/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Vite app container.
   vite:
     # https://hub.docker.com/_/node
-    image: node:alpine
+    image: node:18-alpine
     container_name: ${APP_CONTAINER_NAME:-vite_app}
     networks:
       - local
