--- a/samples/ackee/Makefile
+++ b/samples/ackee/Makefile
@@ -30,4 +30,4 @@ ackee:
   exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:latest /bin/sh -c "yarn install"
+    node:18 /bin/sh -c "yarn install"
