--- a/samples/ackee/compose.yaml
+++ b/samples/ackee/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Ackee app container.
   ackee:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-ackee_app}
     depends_on:
       - mongodb
