--- a/samples/adonisjs/Makefile
+++ b/samples/adonisjs/Makefile
@@ -30,4 +30,4 @@ adonisjs:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:latest /bin/sh -c "yarn create adonis-ts-app ."
+    node:18 /bin/sh -c "yarn create adonis-ts-app ."
