--- a/samples/adonisjs/compose.yaml
+++ b/samples/adonisjs/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The AdonisJS app container.
   adonisjs:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-adonisjs_app}
     networks:
       - local
