--- a/samples/astro/Makefile
+++ b/samples/astro/Makefile
@@ -30,4 +30,4 @@ astro:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:latest /bin/sh -c "yarn create astro ."
+    node:18 /bin/sh -c "yarn create astro ."
