--- a/samples/directus/Makefile
+++ b/samples/directus/Makefile
@@ -32,4 +32,4 @@ directus:
   exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:latest /bin/sh -c "npm init directus-project ."
+    node:18 /bin/sh -c "npm init directus-project ."
