--- a/samples/directus/compose.yaml
+++ b/samples/directus/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Directus app container.
   directus:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-directus_app}
     networks:
       - local
