--- a/samples/eleventy/compose.yaml
+++ b/samples/eleventy/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Eleventy app container.
   eleventy:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-eleventy_app}
     networks:
       - local
