--- a/samples/fastify/Makefile
+++ b/samples/fastify/Makefile
@@ -30,4 +30,4 @@ fastify:
 	exec docker run -it --rm --name playground \
     -v $(PWD)${CODE_DIR}:/app \
     -w="/app" \
-    node:latest /bin/sh -c "npm init fastify && npm install"
+    node:18 /bin/sh -c "npm init fastify && npm install"
