--- a/samples/fastify/compose.yaml
+++ b/samples/fastify/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Fastify app container.
   fastify:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-fastify_app}
     networks:
       - local
