--- a/samples/solid/compose.yaml
+++ b/samples/solid/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The Solid app container.
   solid:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-solid_app}
     networks:
       - local
