--- a/samples/vitepress/compose.yaml
+++ b/samples/vitepress/compose.yaml
@@ -14,7 +14,7 @@ services:
   # The VitePress app container.
   vitepress:
     # https://hub.docker.com/_/node
-    image: node:latest
+    image: node:18
     container_name: ${APP_CONTAINER_NAME:-vitepress_app}
     networks:
       - local
