style: update comments in RedwoodJS sample.

--- a/samples/redwood/.env.example
+++ b/samples/redwood/.env.example
@@ -16,7 +16,7 @@
 # The project name. | default: redwood
 APP_NAME="redwood"
 
-# The Redwood app container name. | default: redwood_app
+# The RedwoodJS app container name. | default: redwood_app
 APP_CONTAINER_NAME="${APP_NAME}_app"
 
 #--------------------------------------------------------------------------
