--- a/samples/redwood/Makefile
+++ b/samples/redwood/Makefile
@@ -2,7 +2,7 @@
 
 #--------------------------------------------------------------------------
 # The Makefile offers a developer-friendly approach
-# to automate the set up of the Redwood sample.
+# to automate the set up of the RedwoodJS sample.
 #
 # You can run the following make command:
 #
@@ -18,7 +18,7 @@ ifneq (,$(wildcard ./.env))
   export
 endif
 
-# The Docker command to scaffold a Redwood project.
+# The Docker command to scaffold a RedwoodJS project.
 docker_command=docker run -it --rm --name playground \
   -v $(PWD)${CODE_DIR}:/app \
   -w="/app" \
@@ -28,16 +28,16 @@ docker_command=docker run -it --rm --name playground \
 # Makefile targets.
 #
 # Each target executes the Yarn `create` command to create a new
-# Redwood project to include/exclude TypeScript support.
+# RedwoodJS project to include/exclude TypeScript support.
 #
 # https://redwoodjs.com/docs/quick-start
 #--------------------------------------------------------------------------
-# Create a Redwood project with vanilla JavaScript.
+# Create a RedwoodJS project with vanilla JavaScript.
 redwood:
 	exec ${docker_command} \
     "yarn create redwood-app . --no-telemetry"
 
-# Create a Redwood project with TypeScript support.
+# Create a RedwoodJS project with TypeScript support.
 redwood-ts:
 	exec ${docker_command} \
     "yarn create redwood-app . --no-telemetry --typescript"
