feat: added client & server apps to Soketi sample.

--- a/samples/soketi/.env.example
+++ b/samples/soketi/.env.example
@@ -19,15 +19,27 @@ APP_NAME="soketi"
 # The Soketi app container name. | default: soketi_app
 APP_CONTAINER_NAME="${APP_NAME}_app"
 
+# The Soketi client container name. | default: soketi_client
+CLIENT_CONTAINER_NAME="${APP_NAME}_client"
+
+# The Soketi client container name. | default: soketi_server
+SERVER_CONTAINER_NAME="${APP_NAME}_server"
+
 #--------------------------------------------------------------------------
 # Network env
 #--------------------------------------------------------------------------
 
-# Map the app container exposed port to the host port. | default: 80
-APP_PORT=80
+# Map the app container exposed port to the host port. | default: 6001
+APP_PORT=6001
 
 # Map the app container exposed port to the host port. | default: 9601
 METRICS_SERVER_PORT=9601
+
+# Map the client container exposed port to the host port. | default: 80
+CLIENT_PORT=80
+
+# Map the server container exposed port to the host port. | default: 8080
+SERVER_PORT=8080
 
 # The Docker network for the containers. | default: soketi_local
 NETWORK_NAME="${APP_NAME}_local"
@@ -38,3 +50,9 @@ NETWORK_NAME="${APP_NAME}_local"
 
 # The project source code directory. | default: /code
 CODE_DIR=/code
+
+# The client source code directory. | default: /client
+CLIENT_DIR=/client
+
+# The server source code directory. | default: /server
+SERVER_DIR=/server
